--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,26 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
+h1 {
+    font-weight: bold;
+}
+
+h2 {
+    color: white;
+    margin: 1rem 5rem;
+    font-size: 1rem;
+    text-align: center;
+}
+
+h2 strong {
+    text-transform: uppercase;
+    font-weight: normal;
+}
+
+p {
+    color: white;
+    margin: 2rem 5rem;
+}
+
 .playing-card{
     height: 35dvh;
     aspect-ratio: .71;
@@ -11,7 +32,7 @@
 }
 
 .playing-card:hover {
-    background-color: turquoise;
+    background-color: aqua;
 }
 
 .playing-card img {
@@ -36,4 +57,8 @@ ul li {
     background-color: white;
     border-radius: 10% 10% 0 0;
 
+}
+
+ul li:hover {
+    background-color: aqua;
 }
